
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EXIT_FAILURE ;
 int dprintf (char*) ;
 int exit (int ) ;
 unsigned long get_kernel_addr_kallsyms () ;
 unsigned long get_kernel_addr_syslog () ;
 unsigned long get_kernel_addr_sysmap () ;

unsigned long get_kernel_addr() {
 unsigned long addr = 0;

 addr = get_kernel_addr_kallsyms();
        if (addr) return addr;

 addr = get_kernel_addr_sysmap();
 if (addr) return addr;

 addr = get_kernel_addr_syslog();
 if (addr) return addr;

 dprintf("[-] KASLR bypass failed\n");
 exit(EXIT_FAILURE);

 return 0;
}
